unpackaged/main/default/objects/Sponsoring_Relationships__c/Sponsoring_Relationships__c.object-meta.xml
<CustomObject>
    <label>Sponsored Relationship</label>
    <nameField>
        <displayFormat>SP- {0000}</displayFormat>
        <label>Sponsoring Relationships ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsored Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>