unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Account_Sponsoring_the_Membership__c.field-meta.xml
<CustomField>
    <fullName>Account_Sponsoring_the_Membership__c</fullName>
    <inlineHelpText>This is the name of the Parent Account which will be sponsoring the Membership in ECCHO for the Child Account</inlineHelpText>
    <label>Account Sponsoring the Membership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>