unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <formula>IF(OR(TEXT(Status__c)==&#39;Final Review by ECCHO Staff&#39;,TEXT(Status__c)==&#39;Active&#39;),
&#39;&lt;a href=&quot;https://www.ecchoonline.org/s/sponsoring-relationships/&#39;&amp;Id&amp;&#39;&quot; class=&quot;slds-button slds-button_brand&quot; target=&quot;_blank&quot;&gt;View&lt;/a&gt;&#39;, 
&#39;&lt;a href=&quot;https://www.ecchoonline.org/s/sponsoring-relationships/&#39;&amp;Id&amp;&#39;&quot; class=&quot;slds-button slds-button_success&quot; target=&quot;_blank&quot;&gt;Edit&lt;/a&gt;&#39;
)&amp;
IF( AND(FON_I_Agree_to_the_Terms__c == true, I_Have_Verified_The_Information__c != true, Agreement_URL_Coordinator__c != null), &#39;&lt;a href=&quot;&#39;&amp; Agreement_URL_Coordinator__c &amp;&#39;&quot; class=&quot;slds-button slds-button_destructive&quot; target=&quot;_blank&quot;&gt;Confirm Agreement&lt;/a&gt;&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actions</label>
    <type>Text</type>
</CustomField>