unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sponsored Member</fullName>
                <default>true</default>
                <label>Sponsored Member</label>
            </value>
            <value>
                <fullName>Affiliate Participant</fullName>
            </value>
            <value>
                <fullName>Licensing Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>