unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Agreed_To_Terms__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Terms__c</fullName>
    <formula>IF( FON_I_Agree_to_the_Terms__c == true, &#39;&lt;span class=&quot;slds-badge slds-theme_success&quot;&gt;Yes&lt;/span&gt;&#39;, &#39;&lt;span class=&quot;slds-badge&quot;&gt;No&lt;/span&gt;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreed To Terms</label>
    <type>Text</type>
</CustomField>