unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Agreement_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Document_URL__c</fullName>
    <formula>&#39;https://us-tdm-tso-15eb63ff4c6-1626e-16e1cffda8f.force.com/LightningMemberPortal/s/agreement?srid=&#39;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Document URL</label>
    <type>Text</type>
</CustomField>