unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_URL__c</fullName>
    <inlineHelpText>Filled in when invitation is sent.</inlineHelpText>
    <label>Agreement URL</label>
    <type>Url</type>
</CustomField>