unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Agreement_URL_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Agreement_URL_Coordinator__c</fullName>
    <label>Agreement URL - Coordinator</label>
    <type>Url</type>
</CustomField>