unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Annual_Dues_Volume_Based__c.field-meta.xml
<CustomField>
    <fullName>Annual_Dues_Volume_Based__c</fullName>
    <formula>Sponsored_Organization__r.FON_Fixed_Annual_Dues_PPM_Calculation__c</formula>
    <label>Annual Dues Volume Based</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>