unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Application_Submission_Options__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Options__c</fullName>
    <description>Selection of options provided to the SM Coordinator for how they will be submitting the Agreement.</description>
    <inlineHelpText>Selection of options provided to the SM Coordinator for how they will be submitting the Agreement. Scanning and Mailing Separately assume the Agreement is complete and ready for TCH to approve.</inlineHelpText>
    <label>Application Submission Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I Am Scanning and Attaching a PDF</fullName>
            </value>
            <value>
                <fullName>I Am Mailing the Executed Member Agreement</fullName>
            </value>
            <value>
                <fullName>I Am Sending an Invitation to the Potential Member to Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>