unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Box must be checked as final step in member drop process. It allows the archived membership to be included in invoicing</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>