unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Ariba_Contract_Workspace__c.field-meta.xml
<CustomField>
    <fullName>Ariba_Contract_Workspace__c</fullName>
    <label>Ariba Contract Workspace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>