unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Billing_Type_Item_or_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type_Item_or_Deposit__c</fullName>
    <inlineHelpText>When a new record is created, default is Deposit Based, however staff can manually change the value to Item Based.</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deposit Based</fullName>
                <default>true</default>
                <label>Deposit Based</label>
            </value>
            <value>
                <fullName>Item Based</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>