unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Charter_Number__c.field-meta.xml
<CustomField>
    <fullName>Charter_Number__c</fullName>
    <label>Charter Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>