unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Primary_Contact_First_Name__c + &quot; &quot; + Primary_Contact_Last_Name__c</formula>
    <inlineHelpText>Formula field which combines the First and Last Name of the Primary Contact. Used in List Views and Reporting.</inlineHelpText>
    <label>Contact</label>
    <type>Text</type>
</CustomField>