unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Country_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Country_Picklist_Values__c</fullName>
    <label>Country Picklist Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>