unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Date_Accepted_by_ECCHO__c.field-meta.xml
<CustomField>
    <fullName>Date_Accepted_by_ECCHO__c</fullName>
    <description>Date ECCHO accepted agreement into membership</description>
    <inlineHelpText>Date ECCHO accepted agreement into membership. Denotes membership start date. Date needs to be manually populated by ECCHO Staff.</inlineHelpText>
    <label>Membership Start Date</label>
    <type>Date</type>
</CustomField>