unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Date_Approved_by_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved_by_Sponsor__c</fullName>
    <description>*System Generated* Date when parent submitted agreement to ECCHO for final approval</description>
    <inlineHelpText>*System Generated* Date when parent gave final approval and submitted agreement to ECCHO for final approval</inlineHelpText>
    <label>Date Approved by Sponsor (Final)</label>
    <type>Date</type>
</CustomField>