unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Date_Submitted_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Review__c</fullName>
    <description>*System Generated* Date when Sponsoring Organization (Parent Account) submitted agreement to their child for approval</description>
    <inlineHelpText>*System Generated* Date when Sponsoring Organization (Parent Account) submitted agreement to their child for approval</inlineHelpText>
    <label>Date Submitted for Review</label>
    <type>Date</type>
</CustomField>