unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>Today()- Date_Accepted_by_ECCHO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>