unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Sponsored_Organization__r.Name  &amp; &quot; is being Sponsored by &quot; &amp;  Sponsoring_Organization__r.Name</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>