unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Download_Uploaded_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Download_Uploaded_Agreement__c</fullName>
    <formula>IF(Upload_ID__c!=null, &#39;&lt;a class=&quot;slds-button slds-button_brand&quot; href=&quot;/sfc/servlet.shepherd/document/download/&#39;&amp;Upload_ID__c&amp;&#39;&quot;&gt;Download Agreement Upload&lt;/a&gt;&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Download</label>
    <type>Text</type>
</CustomField>