unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date the membership was terminated. To be manually populated by ECCHO staff</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>