unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/End_reason__c.field-meta.xml
<CustomField>
    <fullName>End_reason__c</fullName>
    <label>End reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merger/Acquisition</fullName>
            </value>
            <value>
                <fullName>Sponsor Declined Renewal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>