unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/End_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>End_Reason_Other__c</fullName>
    <inlineHelpText>When ECCHO has been notified a Parent Org will no longer be sponsoring a Child Org, please write comments in this field</inlineHelpText>
    <label>End Reason (Other)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>