unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Estimated_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Expiration__c</fullName>
    <inlineHelpText>Est Date Membership will Expire</inlineHelpText>
    <label>Estimated Expiration Date</label>
    <type>Date</type>
</CustomField>