unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Executed_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Executed_By_Email__c</fullName>
    <label>Executed By Email</label>
    <type>Email</type>
</CustomField>