unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Executed_By_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Executed_By_First_Name__c</fullName>
    <label>Executed By First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>