unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Executed_By_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Executed_By_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executed By Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sponsoring_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>