unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Executed_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Executed_By_Name__c</fullName>
    <formula>Executed_By_First_Name__c &amp;&#39; &#39;&amp; Executed_By_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed By Name</label>
    <type>Text</type>
</CustomField>