unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Executed_By_Phone__c.field-meta.xml
<CustomField>
    <fullName>Executed_By_Phone__c</fullName>
    <formula>Executed_By_Lookup__r.OrderApi__Work_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executed By Phone</label>
    <type>Text</type>
</CustomField>