unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Executed_By_Title__c.field-meta.xml
<CustomField>
    <fullName>Executed_By_Title__c</fullName>
    <label>Executed By Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>