unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/First_Billed_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Billed_Month__c</fullName>
    <formula>IF(DAY(Date_Accepted_by_ECCHO__c)&gt;1, MONTH(Date_Accepted_by_ECCHO__c)+1, MONTH(Date_Accepted_by_ECCHO__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First month of current status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>