unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Fixed_Dues_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Dues_Calculation__c</fullName>
    <formula>Volume_Upload__c * Rate_Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Dues Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>