unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_Date_Agreement_Downloaded_by_Eccho__c.field-meta.xml
<CustomField>
    <fullName>FON_Date_Agreement_Downloaded_by_Eccho__c</fullName>
    <description>Date Agreement was downloaded by ECCHO staff and sent to Ariba for final review.</description>
    <inlineHelpText>Date Agreement was downloaded by ECCHO staff and sent to Ariba for final review.</inlineHelpText>
    <label>Date Agreement was Downloaded by Eccho</label>
    <type>Date</type>
</CustomField>