unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_Date_Agreement_was_Approved_by_Child__c.field-meta.xml
<CustomField>
    <fullName>FON_Date_Agreement_was_Approved_by_Child__c</fullName>
    <description>When the contact from the Child Account accepts the terms of the agreement, the date will be automatically populated here.</description>
    <inlineHelpText>When the contact from the Child Account accepts the terms of the agreement, the date will be automatically populated here.</inlineHelpText>
    <label>Date Agreement was Approved by Child</label>
    <type>Date</type>
</CustomField>