unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_Date_Approved_By_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>FON_Date_Approved_By_Sponsor__c</fullName>
    <formula>TEXT(YEAR(Date_Approved_by_Sponsor__c))&amp;&#39;-&#39;&amp;TEXT(MONTH(Date_Approved_by_Sponsor__c))&amp;&#39;-&#39;&amp;TEXT(DAY(Date_Approved_by_Sponsor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Approved By Sponsor</label>
    <type>Text</type>
</CustomField>