unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_I_Agree_to_the_Terms__c.field-meta.xml
<CustomField>
    <fullName>FON_I_Agree_to_the_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Child Account (Account being sponsored) agrees to the terms of the Sponsoring Membership Agreement</description>
    <inlineHelpText>Checked if Child Account agrees to the terms of the Sponsoring Membership Agreement. Default is unchecked.</inlineHelpText>
    <label>I Agree to the Terms of this Agreement</label>
    <type>Checkbox</type>
</CustomField>