unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>FON_Mailing_Address__c</fullName>
    <formula>IF( Mailing_Address_Street__c != null,Mailing_Address_Street__c&amp;&#39;, &#39;,&#39;&#39;)&amp;
IF( Mailing_Address_City__c != null,Mailing_Address_City__c&amp;&#39;, &#39;,&#39;&#39;)&amp;
IF( Future_Notification_Address_State__c  != null,Future_Notification_Address_State__c &amp;&#39; &#39;,&#39;&#39;)&amp;
IF( Mailing_Address_Zip_Code_Postal_Code__c != null,Mailing_Address_Zip_Code_Postal_Code__c&amp;&#39;, &#39;,&#39;&#39;)&amp;
IF( Mailing_Country__c != null,Mailing_Country__c,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>