unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_Sponsor_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>FON_Sponsor_Mailing_Address__c</fullName>
    <formula>IF( Sponsoring_Organization__r.BillingStreet != null,Sponsoring_Organization__r.BillingStreet&amp;&#39;, &#39;,&#39;&#39;)&amp;
IF( Sponsoring_Organization__r.BillingCity != null,Sponsoring_Organization__r.BillingCity&amp;&#39;, &#39;,&#39;&#39;)&amp;
IF( Sponsoring_Organization__r.BillingState != null,Sponsoring_Organization__r.BillingState &amp;&#39; &#39;,&#39;&#39;)&amp;
IF( Sponsoring_Organization__r.BillingPostalCode != null,Sponsoring_Organization__r.BillingPostalCode&amp;&#39;, &#39;,&#39;&#39;)&amp;
IF( Sponsoring_Organization__r.BillingCountry != null,Sponsoring_Organization__r.BillingCountry,&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>