unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/FON_Sub_Quarter__c.field-meta.xml
<CustomField>
    <fullName>FON_Sub_Quarter__c</fullName>
    <formula>CASE(
     Membership_Month__c,
    9, &quot;1Q&quot;,
    10, &quot;1Q&quot;,
    11, &quot;1Q&quot;,
    12, &quot;2Q&quot;,
    1, &quot;2Q&quot;,
    2, &quot;2Q&quot;,
    3, &quot;3Q&quot;,
    4, &quot;3Q&quot;,
    5, &quot;3Q&quot;,
    6, &quot;4Q&quot;,
    7, &quot;4Q&quot;,
    8, &quot;4Q&quot;,
    &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Quarter</label>
    <type>Text</type>
</CustomField>