unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Future_Address__c.field-meta.xml
<CustomField>
    <fullName>Future_Address__c</fullName>
    <formula>Future_Notification_Address_Street__c &amp;&#39;&lt;br&gt;&#39;&amp;
Future_Notification_Address_City__c &amp;&#39;, &#39;&amp; Future_Notification_Address_State__c &amp;&#39; &#39;&amp; Future_Notification_Address_Zip_Code__c &amp;&#39;&lt;br&gt;&#39;&amp;
Future_Notification_Address_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Notification</label>
    <type>Text</type>
</CustomField>