unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Future_Notification_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Future_Notification_Address_City__c</fullName>
    <label>Future Notification Address City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>