unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Future_Notification_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Future_Notification_Address_State__c</fullName>
    <label>Future Notification Address State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>