unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Future_Notification_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Future_Notification_Address_Street__c</fullName>
    <label>Future Notification Address Street</label>
    <type>TextArea</type>
</CustomField>