unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Future_Notification_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Future_Notification_Address_Zip_Code__c</fullName>
    <label>Future Notification Address Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>