unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/I_Have_Verified_The_Information__c.field-meta.xml
<CustomField>
    <fullName>I_Have_Verified_The_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Sponsoring Organization, Marking the Application as Final Approval</description>
    <inlineHelpText>For Sponsoring Organization, Marking the Application as Final Approval - updated via Sponsor Agreement form</inlineHelpText>
    <label>I Have Verified The Information</label>
    <type>Checkbox</type>
</CustomField>