unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/In_Production__c.field-meta.xml
<CustomField>
    <fullName>In_Production__c</fullName>
    <description>Displays production status</description>
    <inlineHelpText>Displays production status if the Account is billable. Default is checked</inlineHelpText>
    <label>In Production</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Receive Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>