unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <formula>&#39;&lt;div class=&quot;slds-grid slds-grid_reverse invoice-label&quot;&gt;&#39;&amp;
&#39;&lt;div class=&quot;slds-col&quot;&gt;&#39;&amp; Sponsored_Organization__r.Name &amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;slds-col&quot;&gt;&#39;&amp; Membership_Start_Date_Formatted__c &amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;slds-col&quot;&gt;&#39;&amp; Is_Prorate__c &amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;div class=&quot;slds-col&quot;&gt;&#39;&amp; IF(Is_Archived__c==true, &#39;Archived&#39;, &#39;&#39;) &amp;&#39;&lt;/div&gt;&#39;&amp;
&#39;&lt;/div&gt;&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Name</label>
    <type>Text</type>
</CustomField>