unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Invoice_Timing__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Timing__c</fullName>
    <inlineHelpText>Determines how often the Sponsoring Organization will be billed for the membership. Needs to be manually entered</inlineHelpText>
    <label>Invoice Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>