unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Invoice_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Year__c</fullName>
    <label>Invoice Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>