unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>Is_Archived__c</fullName>
    <formula>Sponsored_Organization__r.FON_Account_is_Archived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Archived (DELETE)</label>
    <type>Checkbox</type>
</CustomField>