unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/is_First_Year__c.field-meta.xml
<CustomField>
    <fullName>is_First_Year__c</fullName>
    <formula>IF(AND(Days__c &lt; 365, Is_Prorate_Paid__c = false), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First time billed in this status</label>
    <type>Checkbox</type>
</CustomField>