unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Is_Prorate__c.field-meta.xml
<CustomField>
    <fullName>Is_Prorate__c</fullName>
    <formula>IF( is_First_Year__c == true, &#39;Prorate&#39;, &#39;Non-Prorate&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Prorate</label>
    <type>Text</type>
</CustomField>