unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Is_Prorate_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Prorate_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prorate Paid</label>
    <type>Checkbox</type>
</CustomField>