unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Item_Based_Upload__c.field-meta.xml
<CustomField>
    <fullName>Item_Based_Upload__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Based Upload Record</label>
    <referenceTo>Item_Based_Upload_Information__c</referenceTo>
    <relationshipLabel>Sponsored Relationships</relationshipLabel>
    <relationshipName>Sponsored_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>