unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Legal_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Organization_Name__c</fullName>
    <inlineHelpText>This is the Name of the Account</inlineHelpText>
    <label>Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>