unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Mailing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_City__c</fullName>
    <label>Mailing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>