unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Mailing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Street__c</fullName>
    <label>Mailing Street Address</label>
    <type>TextArea</type>
</CustomField>