unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Mailing_Address_Zip_Code_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Zip_Code_Postal_Code__c</fullName>
    <label>Mailing Zip Code/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>