unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country__c</fullName>
    <label>Mailing Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>