unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>