unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Membership_Month__c.field-meta.xml
<CustomField>
    <fullName>Membership_Month__c</fullName>
    <formula>MONTH(Date_Accepted_by_ECCHO__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>