unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Membership_Start_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Membership_Start_Date_Formatted__c</fullName>
    <formula>IF(YEAR(Date_Accepted_by_ECCHO__c)&gt;0, TEXT(YEAR(Date_Accepted_by_ECCHO__c))&amp;&#39;-&#39;&amp;LPAD(TEXT(MONTH(Date_Accepted_by_ECCHO__c)),2,&quot;0&quot;)&amp;&#39;-&#39;&amp;LPAD(TEXT(DAY(Date_Accepted_by_ECCHO__c)),2,&quot;0&quot;),
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Start Date</label>
    <type>Text</type>
</CustomField>