unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/My_Sponsoring_Relationship__c.field-meta.xml
<CustomField>
    <fullName>My_Sponsoring_Relationship__c</fullName>
    <formula>$User.Account_ID__c = Sponsoring_Organization__r.Id</formula>
    <label>My Sponsoring Relationship</label>
    <type>Checkbox</type>
</CustomField>