unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes that pertain to the SR record only</description>
    <inlineHelpText>Notes that apply only to this relationship</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>