unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Organization_URL__c.field-meta.xml
<CustomField>
    <fullName>Organization_URL__c</fullName>
    <inlineHelpText>URL of the Account being sponsored for Membership</inlineHelpText>
    <label>Organization URL</label>
    <type>Url</type>
</CustomField>