unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/PO_ID__c.field-meta.xml
<CustomField>
    <fullName>PO_ID__c</fullName>
    <inlineHelpText>Used for invoice tracking for the Parent Account only</inlineHelpText>
    <label>PO ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>