unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Name__c</fullName>
    <label>Primary Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>