unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Looks up the Contact for the Primary Contact of a Sponsoring Relationship</inlineHelpText>
    <label>Primary Contact (Lookup)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sponsoring_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>