unpackaged/main/default/objects/Sponsoring_Relationships__c/fields/Primary_Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Mailing_City__c</fullName>
    <formula>Primary_Contact_Lookup__r.MailingCity</formula>
    <label>Primary Contact Mailing City</label>
    <type>Text</type>
</CustomField>